Enabled audio lets blender crash with autosplit option for movie output #32475

Closed
opened 2012-09-03 20:50:31 +02:00 by ronald engel · 4 comments

%%%Since one can do nice things lately with VSE this is a bit of a showstopper on 32-bit systems ...

ubuntu 12.04 32-bit
blender 2.63a and newer builds from buildbot

As long as there is NO audio codec selected in the encoding settings autosplitting works as espected (but the movie has no audio of course).
When I choose an codec for audio, blender crashes when it reaches the 2GB split point at rendering/sequencing the movie. I tried pcm,ac3 and mp3. See attached files.

terminal:


...

Append frame 571 Time: 00:00.16
Writing frame 572, render width=1920, render height=1080
Video Frame PTS: 571
Audio Frame PTS: 142663
Append frame 572 Time: 00:00.16
Writing frame 573, render width=1920, render height=1080
Video Frame PTS: 572
Closing ffmpeg...
Flushing delayed frames...
zero video stream 0xa90181c0
Starting output to /home/ronald/Arbeitsfläche/12-002_autosplit_bug/render/splitbug__0010001-0960.avi(ffmpeg)...

Using type=3, codec=26, audio_codec=65536,
video_bitrate=6000, audio_bitrate=192,
gop_size=18, autosplit=2
render width=1920, render height=1080

alloc video stream 0xa9018380
blender: intern/audaspace/intern/AUD_C-API.cpp:802: int AUD_readDevice(AUD_Device*, data_t*, int): Assertion `device' failed.
Abgebrochen (Speicherabzug geschrieben)


(Auto)splitting would be useful on 32-bit systems to render out uncompressed movies (with sound) for doing the compression thing later (with handbrake or any other tool build for that purpose).

%%%

%%%Since one can do nice things lately with VSE this is a bit of a showstopper on 32-bit systems ... ubuntu 12.04 32-bit blender 2.63a and newer builds from buildbot As long as there is NO audio codec selected in the encoding settings autosplitting works as espected (but the movie has no audio of course). When I choose an codec for audio, blender crashes when it reaches the 2GB split point at rendering/sequencing the movie. I tried pcm,ac3 and mp3. See attached files. terminal: --- ... Append frame 571 Time: 00:00.16 Writing frame 572, render width=1920, render height=1080 Video Frame PTS: 571 Audio Frame PTS: 142663 Append frame 572 Time: 00:00.16 Writing frame 573, render width=1920, render height=1080 Video Frame PTS: 572 Closing ffmpeg... Flushing delayed frames... zero video stream 0xa90181c0 Starting output to /home/ronald/Arbeitsfläche/12-002_autosplit_bug/render/splitbug__0010001-0960.avi(ffmpeg)... ``` Using type=3, codec=26, audio_codec=65536, video_bitrate=6000, audio_bitrate=192, gop_size=18, autosplit=2 render width=1920, render height=1080 ``` alloc video stream 0xa9018380 blender: intern/audaspace/intern/AUD_C-API.cpp:802: int AUD_readDevice(AUD_Device*, data_t*, int): Assertion `device' failed. Abgebrochen (Speicherabzug geschrieben) --- (Auto)splitting would be useful on 32-bit systems to render out uncompressed movies (with sound) for doing the compression thing later (with handbrake or any other tool build for that purpose). %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r50445.%%%

%%%fixed r50445.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Awesome - Thank you!%%%

%%%Awesome - Thank you!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32475
No description provided.