fix [#32475] Enabled audio lets blender crash with autosplit option for movie output